# oc-patch-core

sql/oc-patch/: characters-character_stats.sql  world-areaguardnpc.sql  world-autobroadcast.sql  world-buffhealnpc.sql  world-codeboxnpc.sql  world-commandwarp.sql  world-emaralddream.sql  world-goteleport.sql  world-itemsummonnpc.sql  world-npcdoorcodes.sql  world-npctokens.sql  world-occhat.sql  world-soapcommands.sql
sql/scripts/: world_script_waypoints.sql
sql/updates/: 823_world_script_texts.sql  827_world_script_texts.sql  828_world_script_texts.sql  829_world_script_texts.sql  830_world_script_texts.sql  831_world_script_texts.sql
src/: CMakeLists.txt
src/game/: AuctionHouseHandler.cpp  CMakeLists.txt  Channel.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  DBCStructure.h  GameObject.cpp  Guild.cpp  Language.h  Level0.cpp  Level1.cpp  Level3.cpp  MapManager.cpp  Player.cpp  Player.h  ScriptLoader.cpp  World.cpp  World.h
src/irc/: CMakeLists.txt  IRCClient.cpp  IRCClient.h  IRCCmd.cpp  IRCCmd.h  IRCCmde.cpp  IRCFunc.h  IRCIO.cpp  IRCLog.cpp  IRCLog.h  IRCSock.cpp  MCS_OnlinePlayers.cpp  MCS_OnlinePlayers.h
src/oregoncore/: CMakeLists.txt  CliRunnable.cpp  Main.cpp  Master.cpp  oregoncore.conf.dist
src/scripts/Custom/: item_summonnpc.cpp  item_teleport.cpp  npc_areaguard.cpp  npc_buff.cpp  npc_codebox.cpp  npc_door_codes.cpp  npc_guildmaster.cpp  npc_heal.cpp  npc_rename.cpp  npc_tokens.cpp
src/scripts/Kalimdor/: darkshore.cpp
